--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@google-cloud/vertexai": "^1.10.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
     "mammoth": "^1.11.0",
@@ -27,6 +30,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.2.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
