--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:ai": "node tests/ai-integration.test.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
